Details
-
Bug
-
Resolution: Fixed
-
Minor
-
0.4.15-dev-5190-g6a1f287 https://git.reactos.org/?p=reactos.git;a=commit;h=6a1f287820e6ada7d957a6451a7ecc54f73c1876
Description
Steps to reproduce:
- Start Live CD
- Open "My Computer"
- Select a disk (either hard disk or CD drive)
- Open its properties (either with Alt+Enter or by context menu)
- Close Properties window (either with Esc, Alt+F4, or Cancel button)
Expected: Properties window is closed
Observed: Window closes and opens again (second time it closes properly)
Still happens in 0.4.15-dev-5224-g4572aad. Installation from Boot CD is affected as well, but it's quicker to reproduce with Live CD.
Nothing is logged in the debug log while the window is being opened or closed, but I'm attaching it anyway: 0.4.15-dev-5224-g4572aad.txt![]()
Attachments
Issue Links
- blocks
-
CORE-18386 Property sheets are not positioned correctly
-
- Resolved
-
- clones
-
CORE-18073 Drive properties dialog reopens after 1st cancel
-
- Resolved
-
- relates to
-
CORE-18613 Cannot open more than one Disk properties dialog with context menu
-
- Resolved
-